package main.java.com.team1.dao;

public interface DataAccessObject<T> {
}
